--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,18 @@
 services:
   app-prod:
-    image: bolt-ai:production
+    image: platflow-frontend-gen:production
     build:
       context: .
       dockerfile: Dockerfile
-      target: bolt-ai-production
+      target: platflow-frontend-gen-production
     ports:
-      - '5173:5173'
+      - '8080:8080'
     env_file: '.env.local'
     environment:
       - NODE_ENV=production
       - COMPOSE_PROFILES=production
       # No strictly needed but serving as hints for Coolify
-      - PORT=5173
+      - PORT=8080
       - GROQ_API_KEY=${GROQ_API_KEY}
       - HuggingFace_API_KEY=${HuggingFace_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
@@ -34,9 +34,9 @@ services:
       - production
 
   app-dev:
-    image: bolt-ai:development
+    image: platflow-frontend-gen:development
     build:
-      target: bolt-ai-development
+      target: platflow-frontend-gen-development
     env_file: '.env.local'
     environment:
       - NODE_ENV=development
